--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: jekyll-theme-minimal
 logo: logo.jpg
+title: JWST Giant Planets
+description: Website for the JWST Giant Planet Systems programme.
